VFS-6835 fixed tagged icon vertical align in safari

--- a/app/styles/onedata-gui-common/components/one-sidebar.scss
+++ b/app/styles/onedata-gui-common/components/one-sidebar.scss
@@ -126,6 +126,11 @@
     }
   }
 
+  .one-icon-tagged-main {
+    // (Safari only) vertical align fix
+    vertical-align: middle;
+  }
+
   .sidebar-item-title {
     flex-grow: 1;
     min-width: 0;
